--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -3,7 +3,7 @@
   <head>
       <meta charset="UTF-8"/>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <script src="/js/phaser/dist/phaser.js"></script>
+      <script src="/js/phaser/dist/phaser-arcade-physics.js"></script>
       <title>Welcome to multi-client-ws</title>
   </head>
   <body>
