--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8"/>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <script src="/js/phaser/dist/phaser-arcade-physics.js"></script>
-      <title>Welcome to multi-client-ws</title>
+      <title>Welcome to cuberoom</title>
   </head>
   <body>
     <div id="navbar"></div>
@@ -12,7 +12,7 @@
       <section class="section">
         <div class="container is-fluid">
           <div class="content">
-            <h4 class="title">Welcome to multi-client-ws</h4>
+            <h4 class="title">Welcome to cuberoom</h4>
             <p>If you're seeing this message, that means you haven't yet compiled your ClojureScript!</p>
             <p>Please run <code>lein figwheel</code> to start the ClojureScript compiler and reload the page.</p>
             <h4>For better ClojureScript development experience in Chrome follow these steps:</h4>
