--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -28,6 +28,8 @@
         </div>
       </section>
     </div>
+    <div id="phaser-parent">
+    </div>
 
     <!-- scripts and styles -->
     {% style "/assets/bulma/css/bulma.min.css" %}
