--- a/try2-js/static/index.html
+++ b/try2-js/static/index.html
@@ -2,8 +2,10 @@
 <html>
   <head>
 	<title>The HTML5 title</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   </head>
   <body>
 	<h1>Hi</h1>
+	<script type="text/javascript" src="./index.js"></script>
   </body>
 </html>
