--- a/try2-js/static/index.html
+++ b/try2-js/static/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   </head>
   <body>
-	<h1>Hi</h1>
+	<div id="phaser-parent"></div>
 	<script type="text/javascript" src="./index.js"></script>
   </body>
 </html>
