--- a/try2-js/static/index.html
+++ b/try2-js/static/index.html
@@ -3,6 +3,12 @@
   <head>
 	<title>The HTML5 title</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<style type="text/css" media="screen">
+	  body {
+		  margin: 0;
+		  overflow: hidden;
+	  }
+	</style>
   </head>
   <body>
 	<div id="phaser-parent"></div>
