--- a/public/index.html
+++ b/public/index.html
@@ -14,5 +14,13 @@
 </head>
 
 <body>
+
+	<form id="chat" action="/assets/etc/input_test.php" method="post">
+		<input  id="chat-input" type="text" title="입력" name="input" value="엔터키를 누르면 대화할 수 있습니다.">
+		<button id="chat-submit" type="submit" value=""> 
+<svg class="svg-icon" style="width: 2em; height: 30;vertical-align: middle;fill: currentColor;overflow: hidden;" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M804.248575 157.915589l0 431.250908L393.361461 589.166497 393.361461 407.414013l-265.620613 227.143277 265.620613 227.01741L393.361461 679.95013l456.278931 0c25.086351 0 45.391816-20.36277 45.391816-45.39284L895.032208 157.915589 804.248575 157.915589 804.248575 157.915589zM804.248575 157.915589"  /></svg>
+		</button>
+	  </form>
+
 </body>
 </html>
